--- a/layouts/shortcodes/js_wc.html
+++ b/layouts/shortcodes/js_wc.html
@@ -1,4 +1,4 @@
+<script src="wc.js"></script>
 <h2>Word Count: <span id="count">0</span></h2>
 <textarea id="input" rows="10"></textarea>
 
-<script src="/assets/js/wc.js"></script>
